--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,16 @@ root = true
 hyyyyyyyyyyyyyyy
 [*]
 charset = utf-8
+
+I am making a change 
+
+
+
+
+
+
+
+
 indent_style = space
 indent_size jklk;lkj;lkj;lkj= 2
 insert_final_newline = true
